--- a/index.html
+++ b/index.html
@@ -1,40 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="mikApp">
 
 <head>
   <title>Skarpety MIK</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
+  <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
 
-  <!-- Compiled and minified JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
-  <script src="node_modules/core-js/client/shim.min.js"></script>
-  <script src="node_modules/zone.js/dist/zone.js"></script>
-  <script src="node_modules/reflect-metadata/Reflect.js"></script>
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
-  <!-- 2. Configure SystemJS -->
-  <script src="systemjs.config.js"></script>
-  <script>
-    System.import('app').catch(function(err){ console.error(err); });
-  </script>
+  <script type="text/javascript" src="node_modules/angular-animate/angular-animate.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-aria/angular-aria.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-messages/angular-messages.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
+
+  <script type="text/javascript" src="app/app.module.js"></script>
+  <script type="text/javascript" src="app/app.config.js"></script>
+
 </head>
 
 <body>
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo">MIK</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
-        <li><a href="collapsible.html">JavaScript</a></li>
-      </ul>
-    </div>
-  </nav>
-  <my-app>Loading...</my-app>
+  <div layout="column" layout-fill>
+    <md-toolbar class="md-primary md-hue-2">
+
+      <div class="md-toolbar-tools">
+        <span>Mik Skarpety</span>
+
+        <!-- fill up the space between left and right area -->
+        <span flex></span>
+
+        <md-button>
+          Strona główna
+        </md-button>
+        <md-button>
+          Oferta
+        </md-button>
+        <md-button>
+          O firmie
+        </md-button>
+        <md-button>
+          Kontakt
+        </md-button>
+      </div>
+
+    </md-toolbar>
+    <md-content>
+      <div layout="row" layout-align="center start">
+        <div flex="20">
+          <img src="images/mik.jpg" alt="Skarpety MIK">
+        </div>
+        <div layout="column" flex="40">
+          <h2>
+            Skarpety od A do Z
+          </h2>
+          <md-button class="md-accent md-raised">
+            Zobacz najnowsza oferte
+          </md-button>
+        </div>
+      </div>
+    </md-content>
+  </div>
 </body>
 
 </html>
