--- a/index.html
+++ b/index.html
@@ -9,26 +9,11 @@
 
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
+  <link rel="stylesheet" href="dist/lib.min.css">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/animations.css">
 
-  <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
-
-  <script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-  <script type="text/javascript" src="node_modules/angular-animate/angular-animate.min.js"></script>
-  <script type="text/javascript" src="node_modules/angular-aria/angular-aria.min.js"></script>
-  <script type="text/javascript" src="node_modules/angular-messages/angular-messages.min.js"></script>
-  <script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
-
-  <script type="text/javascript" src="app/app.module.js"></script>
-  <script type="text/javascript" src="app/app.config.js"></script>
-  <script type="text/javascript" src="app/app.routes.js"></script>
-
-  <script type="text/javascript" src="app/main/main.controller.js"></script>
-
-  <script type="text/javascript" src="app/offer/offer.service.js"></script>
-  <script type="text/javascript" src="app/offer/offer.controller.js"></script>
+  <script type="text/javascript" src="dist/lib.min.js"></script>
 
 </head>
 
@@ -40,7 +25,7 @@
     </md-toolbar>
 
     <md-content>
-      <ui-view></ui-view>
+      <div ui-view></div>
       <div flex-offset="5" flex-offset-gt-sm="10" flex="90" flex-gt-sm="80" layout="column">
         <h2>Dziewiarstwo Maszynowe Mieczysław Klimczak</h2>
         <p>
