--- a/index.html
+++ b/index.html
@@ -9,12 +9,31 @@
 
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="dist/lib.min.css">
+  <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/animations.css">
 
-  <script type="text/javascript" src="dist/lib.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
+  <script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+
+  <script type="text/javascript" src="node_modules/angular-animate/angular-animate.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-aria/angular-aria.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-messages/angular-messages.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-material/angular-material.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-sanitize/angular-sanitize.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-translate/dist/angular-translate.min.js"></script>
+  <script type="text/javascript" src="node_modules/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
+
+
+  <script type="text/javascript" src="app/app.module.js"></script>
+  <script type="text/javascript" src="app/app.config.js"></script>
+  <script type="text/javascript" src="app/app.routes.js"></script>
+
+  <script type="text/javascript" src="app/main/main.controller.js"></script>
+
+  <script type="text/javascript" src="app/offer/offer.service.js"></script>
+  <script type="text/javascript" src="app/offer/offer.controller.js"></script>
 </head>
 
 <body>
