Details view added.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
   <script type="text/javascript" src="app/offer/offer.service.js"></script>
   <script type="text/javascript" src="app/offer/offer.controller.js"></script>
+  <script type="text/javascript" src="app/offer/offer-details.controller.js"></script>
 </head>
 
 <body>
@@ -49,10 +50,10 @@
       <div class="footer">
         <div flex-offset="5" flex-offset-gt-sm="20" flex-gt-sm="60" flex="90">
           <p>
-            Oświadczamy, iż w prowadzonej działalności gospodarczej są przestrzegane przepisy prawa, w tym w szczególności Kodeks Pracy
-            oraz akty wykonawcze wydane na jego podstawie. Przy produkcji nie pracują dzieci, lecz osoby dorosłe, a pensje
-            pracowników pozwalają im na godne życie. Gwarantujemy poszanowanie praw pracownika oraz godne warunki pracy.
-            Kupuj świadomie i zapoznaj się z naszą ofertą już dziś.
+            Oświadczamy, że przy produkcji naszych skarpet są przestrzegane przepisy prawa, a w szczególności Prawa człowieka.
+            Przy produkcji nie pracują dzieci, ani osoby nieletnie, a stanowsika pracownicze zapewniają godne warunki pracy.
+            Produkcja oparta jest na surowcach naturalnym (przędza bawełniana i bambusowa), co minimalizuje negatwywny wpływ na środowisko.
+            Produkt europejski. Wyprodukowane w Polsce.
           </p>
         </div>
       </div>
