--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="node_modules/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/animations.css">
+  <link rel="stylesheet" href="styles/colors.css">
 
   <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
 
@@ -52,9 +53,10 @@
         <div flex-offset="5" flex-offset-gt-sm="20" flex-gt-sm="60" flex="90">
           <p>
             Oświadczamy, że przy produkcji naszych skarpet są przestrzegane przepisy prawa, a w szczególności Prawa człowieka.
-            Przy produkcji nie pracują dzieci, ani osoby nieletnie, a stanowsika pracownicze zapewniają godne warunki pracy.
-            Produkcja oparta jest na surowcach naturalnym (przędza bawełniana i bambusowa), co minimalizuje negatwywny wpływ na środowisko.
-            Produkt europejski. Wyprodukowane w Polsce.
+            Przy produkcji nie pracują dzieci, ani osoby nieletnie.
+            Produkcja oparta jest na surowcach naturalnych (przędza bawełniana i bambusowa), co minimalizuje negatwywny wpływ na środowisko.
+            Produkt europejski.<br />
+            Wyprodukowane w Polsce.
           </p>
         </div>
       </div>
