Change in index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <md-toolbar class="md-primary md-hue-2" ng-include="'/app/main/views/menu.template.html'">
     </md-toolbar>
 
-    <md-content layout="column" layout-align="space-between stretch" flex="100">
+    <md-content layout="column" layout-align="space-between stretch">
       <div ui-view></div>
 
       <div class="footer" ng-include="'/app/main/views/footer.template.html'">
