--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <script type="text/javascript" src="app/offer/offer.service.js"></script>
   <script type="text/javascript" src="app/offer/offer.controller.js"></script>
   <script type="text/javascript" src="app/offer/offer-details.controller.js"></script>
+  <script type="text/javascript" src="app/offer/color-box.directive.js"></script>
   <script type="text/javascript" src="app/offer/category.filter.js"></script>
 </head>
 
