Footer disabled due to IE bug.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <md-content layout="column" layout-align="space-between stretch" flex="100">
       <div ui-view></div>
 
-      <div class="footer" ng-include="'/app/main/views/footer.template.html'">
-      </div>
+      <!--<div class="footer" ng-include="'/app/main/views/footer.template.html'">
+      </div>-->
     </md-content>
 
   </div>
